Adding files containing codes